Lazy Loading for Admin Module

--- a/src/app/shop/navbar/navbar.component.html
+++ b/src/app/shop/navbar/navbar.component.html
@@ -15,17 +15,9 @@
         <a routerLink="/shop" class="nav-link active">Orders</a>
       </li>
       <li class="navbar-nav">
-        <a routerLink="/shop" class="nav-link active">Add Product</a>
+        <a routerLink="/admin" class="nav-link active">Admin</a>
       </li>
-      <li class="navbar-nav">
-        <a routerLink="/shop" class="nav-link active">Admin Product</a>
-      </li>
-      <li class="navbar-nav">
-        <a routerLink="/shop" class="nav-link active">Add Category</a>
-      </li>
-      <li class="navbar-nav">
-        <a routerLink="/shop" class="nav-link active">Categories</a>
-      </li>
+
     </ul>
     <ul class="navbar-nav mr-auto">
       <li class="navbar-nav">
