--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,21 @@
-<div class="bg-primary p-2 text-white">
-  Admin PlaceHolder
+<div class="container-fluid">
+  <div class="row">
+    <div class="bg-primary p-2 text-white">
+      Admin Panel
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="col-3">
+    <button  routerLinkActive="Activate" routerLink="/shop"class="btn btn-outline-info btn-block">Shop</button>
+    <button routerLinkActive="Activate"  routerLink="/admin/main/products" class="btn btn-outline-info btn-block">Products</button>
+    <button routerLinkActive="Activate"  routerLink="/admin/main/categories" class="btn btn-outline-info btn-block">Categories</button>
+    <button  routerLink="/admin/main/orders" class="btn btn-outline-info btn-block">Orders</button>
+    <button (click) = "logout()" class="btn btn-outline-danger btn-block">Logout</button>
+  </div>
+  <div class="col-9">
+    <router-outlet></router-outlet>
+  </div>
 </div>
