--- a/src/app/shop/navbar/navbar.component.html
+++ b/src/app/shop/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <a routerLink="/shop" class="nav-link active">Orders</a>
       </li>
       <li class="navbar-nav">
-        <a routerLink="/admin" class="nav-link active">Admin</a>
+        <a routerLink="/admin/main" class="nav-link active">Admin</a>
       </li>
 
     </ul>
