--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -7,7 +7,7 @@
 </div>
 
 
-<div class="row">
+<div class="row mt-2">
   <div class="col-3">
     <button  routerLinkActive="Activate" routerLink="/shop"class="btn btn-outline-info btn-block">Shop</button>
     <button routerLinkActive="Activate"  routerLink="/admin/main/products" class="btn btn-outline-info btn-block">Products</button>
