--- a/src/app/admin/products/product-list/product-list.component.html
+++ b/src/app/admin/products/product-list/product-list.component.html
@@ -1,1 +1,24 @@
-<p>product-list works!</p>
+<table class="table table-hover table-striped">
+  <thead>
+    <tr>
+      <th></th>
+      <th>name</th>
+      <th>price</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let p of getProducts()">
+      <td>
+        <img src="/assets/img/{{p.imageUrl}}" width="50">
+      </td>
+      <td>{{ p.name }}</td>
+      <td>{{ p.price }}</td>
+      <td>
+        <button class="btn btn-warning btn-sm" [routerLink]="['/admin/main/products/edit',p.id]">Edit</button>
+        <button class="btn btn-danger btn-sm ml-2" (click)="deleteProduct(p)">Delete</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<button class="btn btn-primary" routerLink="/admin/main/products/create">Add Product</button>
