--- a/src/app/admin/categories/category-list/category-list.component.html
+++ b/src/app/admin/categories/category-list/category-list.component.html
@@ -1,15 +1,13 @@
 <table class="table table-hover table-striped">
   <thead>
     <tr>
-      <th></th>
-      <th>name</th>
+      <th>Name</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let p of getCategories()">
       <td>{{ p.name }}</td>
-
       <td>
         <button class="btn btn-warning btn-sm" [routerLink]="['/admin/main/categories/edit',p.id]">Edit</button>
         <button class="btn btn-danger btn-sm ml-2" (click)="deleteCategory(p)">Delete</button>
